Loading gif switched to relative preventing overlap with multiple tables

--- a/src/assets/sass/components/_loading-gif.scss
+++ b/src/assets/sass/components/_loading-gif.scss
@@ -26,11 +26,10 @@
 }
 
 /*--Loading Gif (spinner)--*/
-.absLoadingContainer {
-    position: absolute;
-    top: 0;
+.loadingContainer {
+    position: relative;
+    top: 80px;
     left: 0;
-    background-color: #ffffff;
     width: 100%;
     height: 100%;
     z-index: 1200;
